[package]
name = "leptos-solana"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Pure-Rust Solana Wallet Standard bindings for Leptos (Phantom, Backpack, Solflare, ...). No JS shim."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rhovian/leptos-solana"
homepage = "https://github.com/rhovian/leptos-solana"
documentation = "https://docs.rs/leptos-solana"
authors = ["rhovian <atomicjab@proton.me>"]
keywords = ["solana", "leptos", "wallet", "wasm", "web3"]
categories = ["wasm", "web-programming", "cryptography::cryptocurrencies"]
exclude = [
    "demo/",
    "/.github",
]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
# Build docs as if we were compiling for the browser so `web-sys` / `wasm-bindgen`
# cfgs light up correctly.
targets = ["wasm32-unknown-unknown"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Leptos (caller picks csr/hydrate/ssr features)
leptos = "0.8"

# Solana client primitives (post-SDK split Anza crates — no solana-sdk umbrella).
# `serde` is required on every crate so bincode can walk Transaction/Message.
solana-pubkey = { version = "4", features = ["serde"] }
solana-hash = { version = "4", features = ["serde", "std"] }
solana-instruction = { version = "3", features = ["serde"] }
solana-message = { version = "4", features = ["serde"] }
solana-transaction = { version = "4", features = ["serde"] }
solana-signature = { version = "3", features = ["serde"] }
solana-commitment-config = "3"

# Wasm + browser interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "Storage",
    "console",
] }
serde-wasm-bindgen = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
base64 = "0.22"
# Solana wire format is bincode v1, not v2/v3 — don't upgrade.
bincode = "1.3"

# RPC over fetch
gloo-net = { version = "0.6", features = ["http"] }

# Errors
thiserror = "2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
