[package]
name = "leptos-solana-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
leptos-solana = { path = ".." }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
bs58 = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
